# Lyson-AI-Agent

./: CHECKLIST.md
[root]/: .gitignore
backup-local-files/: CHECKLIST.md  Lyson MVP - Technical Specifications.txt  PRD.txt  README-local.md  Roadmap.md
lyson-backend/: README.md  pyproject.toml
lyson-backend.backup/: env.example
lyson-backend.backup/app/: __init__.py  config.py
lyson-backend.backup/app/data/: __init__.py
lyson-backend.backup/app/templates/: __init__.py
lyson-frontend/: README.md  next.config.js  package.json  tailwind.config.js
lyson-shared/: README.md  package.json  tsconfig.json
lyson-shared/src/: index.ts
lyson-shared/src/schemas/: api.ts
lyson-shared/src/types/: audit.ts  session.ts  workspace.ts
